// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SnailTrail component:  Container:  should match the snapshot  1`] = `
<DocumentFragment>
  <div
    class="component__Container-sc-9bgwvf-1 eMcUZE"
  />
</DocumentFragment>
`;

exports[`SnailTrail component:  Gradient:  should match the snapshot  1`] = `
<DocumentFragment>
  <div
    class="component__Gradient-sc-9bgwvf-0 dOMDPS"
  />
</DocumentFragment>
`;

exports[`SnailTrail component:  Gradient:  when true, it should match the snapshot  1`] = `
<DocumentFragment>
  <div
    class="component__Gradient-sc-9bgwvf-0 iHoMPR"
  />
</DocumentFragment>
`;
